--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
                     VIEW OUR PROJECTS
                     </a>
             </div>
-            <img src="image/Rectangle%202.png" alt="">
+            <div class="block_image">
+<!--                <img src="image/Rectangle%202.png" alt="">-->
+            </div>
+
         </div>
     </div>
 </section>
@@ -132,25 +135,80 @@
                 Cras ultrices accumsan ornare. Phasellus tristique ullamcorper luctus.
                 Nunc varius ullamcorper felis. Nulla nibh ipsum, rutrum.</p>
         </div>
-
-
     </div>
 </section>
 <section>
     <div class="container">
-
+        <div class="feature">
+            <h3>Featured Projects</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Cras ultrices accumsan ornare. Phasellus tristique ullamcorper luctus.
+                Nunc varius ullamcorper felis. Nulla nibh ipsum, rutrum.</p>
+        </div>
     </div>
 </section>
 <section>
     <div class="container">
+        <div class="feature_projects">
 
+            <div class="project">
+                <div class="declaration">
+                    <div class="titles">
+                        <div class="title_first">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        </div>
+                        <h2>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique ullamcorper luctus.
+                        </h2>
+                    </div>
+                    <a class="button" href="#">
+                    VIEW OUR PROJECTS
+                    </a>
+                </div>
+                <div class="feature_projects_image"></div>
+            </div>
+
+            <div class="project">
+                <div class="feature_projects_image"></div>
+                <div class="declaration">
+                    <div class="titles">
+                        <div class="title_first">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        </div>
+                        <h2>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique ullamcorper luctus.
+                        </h2>
+                    </div>
+                    <a class="button" href="#">
+                        VIEW OUR PROJECTS
+                    </a>
+                </div>
+            </div>
+
+            <div class="project">
+                <div class="declaration">
+                    <div class="titles">
+                        <div class="title_first">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        </div>
+                        <h2>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultrices accumsan ornare. Phasellus tristique ullamcorper luctus.
+                        </h2>
+                    </div>
+                    <a class="button" href="#">
+                        VIEW OUR PROJECTS
+                    </a>
+                </div>
+                <div class="feature_projects_image"></div>
+            </div>
+        </div>
     </div>
 </section>
 <footer>
-
-</footer>
     <div class="container">
-
+        <p>Copyright 2017. All Rights Reserved.</p>
     </div>
+</footer>
+
 </body>
 </html>
